# spotify-downloader

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  build.bat  build.ps1  generate_icon.py  gui_app.py  installer.iss  installer.py  pyproject.toml  requirements.txt  spotify_downloader.py
.github/workflows/: build-exe.yml  ci.yml
installer/: spotify-downloader-tui.bat  tui_launcher.bat
scripts/: __init__.py  generate_logo.py  write_version_include.py
src/: __init__.py  duplicates.py  manifest.py  models.py  spotdl_tools.py  state.py
src/gui/: __init__.py  app.py  duplicates_frame.py  history_frame.py  home_frame.py  log_frame.py  preview_frame.py  settings_frame.py  theme.py  utils.py  workers.py
src/gui_qt/: __init__.py  duplicates_panel.py  history_panel.py  home_panel.py  icons.py  log_panel.py  main_window.py  preview_panel.py  settings_panel.py  sidebar.py  theme.py  tour.py  utils.py  workers.py
src/gui_qt/styles/: main.qss
tests/: conftest.py  test_duplicates.py  test_generate_icon.py  test_gui_qt_utils.py  test_gui_qt_widgets.py  test_gui_qt_workers.py  test_gui_theme.py  test_gui_utils.py  test_installer.py  test_manifest.py  test_models.py  test_spotdl_tools.py  test_spotify_downloader.py  test_state.py  test_version.py  test_workers.py
