[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "spotify-downloader"
version = "0.1.1"
requires-python = ">=3.11"
description = "Desktop app for downloading Spotify playlists and tracks via spotDL"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "PySide6>=6.6.0",
    "spotdl>=4.5.0",
    "mutagen>=1.45.0",
    "packaging>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "mypy>=1.11",
    "pyinstaller>=6.0",
    "pip-audit>=2.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"src.gui_qt.styles" = ["*.qss"]
"src" = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
